1.修复调试通用加密约定规则测试全覆盖